<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HarshJelly Tweaker</string>
    <string name="crt_animation">CRT Animation</string>
    <string name="killer">Long Press Back to Kill</string>
    <string name="aosp_vib">Vibration</string>
    <string name="aosp_oriet">Rotation</string>
    <string name="ascend_ring">Ascending Ringtone</string>
    <string name="about">About</string>
    <string name="rom">HarshJelly ROM</string>
    <string name="info_1">Tweaker</string>
    <string name="info_2">4.21</string>
    <string name="harshjelly_tweaker">HarshJelly Tweaker</string>
    <string name="harsh_panchal_mr_harsh_xda_develoers_com_">Harsh Panchal (BOOTMGR@xda-develoers.com)</string>
    <string name="author">Developer:</string>
    <string name="log">Logger</string>
    <string name="sysctl">Sysctl Tweaks</string>
    <string name="basic">ROM Tweaks</string>
    <string name="lock">LockScreen Tweaks</string>
    <string name="misc">Misc. Tweaks</string>
    <string name="unplug">Wake on Unplug</string>
    <string name="warning">Warning</string>
    <string name="hotboot_msg">Do you want to Hotboot now?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="all_rot">Allow All Rotations</string>
    <string name="hotboot">Hotboot</string>
    <string name="navigation">Show Navigationbar</string>
    <string name="navigation_sum">Show onscreen navigation Keys</string>
    <string name="ime">IME Switcher Notification</string>
    <string name="ime_sum">Show IME Switcher icon in notification bar</string>
    <string name="scroll">Scrolling Cache</string>
    <string name="scroll_sum">Enable Scrolling Cache</string>
    <string name="headset">Safe Volume Warning</string>
    <string name="headset_sum">Notifies user about risk of Ear damage on high volume</string>
    <string name="help">Help</string>
    <string name="reset">Reset to Defaults</string>
    <string name="rest_to_def">Are sure want to switch to default Settings?</string>
    <string name="info">Information</string>
    <string name="wifi_notif">WiFi Connection Toast</string>
    <string name="wifi_notif_sum">Shows toast when connected to WiFi AP</string>
    <string name="tw_title">TWLauncher Tweaks</string>
    <string name="tw_pg_rot">Wallpaper Scrolling</string>
    <string name="tw_pg_rot_sum">Enables scrolling of wallpaper (need to restart launcher)</string>
    <string name="font">Font</string>
    <string name="font_sum">Sets default font</string>
    <string name="statusbar_scroll">Quickpanel auto Scrolling</string>
    <string name="statusbar_scroll_sum">Automatically scrolls quickpanel toggle upon expanding statusbar</string>
    <string name="xposed">Xposed Tweakes</string>
    <string name="xposed_sum">Tweaks powered by Xposed Framework.Module must be enabled from Xposed Installer inorder to make them work</string>
    <string name="longpress_delay">Long press Delay</string>
    <string name="longpress_delay_sum">Amount of time to delay actions on holding Hardware Keys (Long press back to kill,Recent apps etc)</string>
    <string name="clear_defaults">Show Defaults Dialog</string>
    <string name="clear_defaults_sum">Shows dialog when default actions is chosen from various choices</string>
    <string name="usertile">UserTile Image</string>
    <string name="usertile_sum">UserTile icon displayed on 4.2 statusbar</string>
    <string name="statusbar_transparancy">Statusbar Transparancy</string>
    <string name="statusbar_transparancy_sum">Choose transparancy level for statusbar</string>
    <string name="username">User Name</string>
    <string name="username_sum">Name to be displayed on contacts tile in statusbar</string>
    <string name="statusbar_header">Statusbar Tweaks</string>
    <string name="follow_statubar_trans">Follow statusbar Transparancy in Lockscreen</string>
    <string name="follow_statubar_trans_sum">Enable this if you\'re using transparent Statusbar</string>
    <string name="blur_lock">Blur Effect</string>
    <string name="blur_lock_sum">Show blurred image of background activity on Lockscreen</string>
    <string name="blur_lock_multi">Multi Threading for Blur Effect</string>
    <string name="blur_lock_multi_sum">To fix delay in lock when blur effect is enabled</string>
    <string name="double_tap_sleep">Double tap to Sleep</string>
    <string name="double_tap_sleep_sum">Sleep device on double tapping statusbar</string>
</resources>