<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/basic" >
        <SwitchPreference android:title="@string/crt_animation" android:id="@+id/s_crt" android:key="crt_toggle"/>
        <SwitchPreference android:title="@string/killer" android:id="@+id/s_killer" android:key="killer_toggle"/>
        <SwitchPreference android:title="@string/ascend_ring" android:id="@+id/s_ascendring" android:key="ascending_toggle"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/lock" >
        <SwitchPreference android:title="@string/aosp_vib" android:id="@+id/s_vib" android:key="vib_toggle"/>
        <SwitchPreference android:title="@string/aosp_oriet" android:id="@+id/s_oriet" android:key="rot_toggle"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/misc" >
        <SwitchPreference android:title="@string/log" android:id="@+id/s_logger" android:key="log_toggle"/>
        <SwitchPreference android:title="@string/sysctl" android:id="@+id/s_sysctl" android:key="sys_toggle"/>
    </PreferenceCategory>
</PreferenceScreen>